--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react": "19.0.0",
     "react-native": "0.79.2",
     "react-native-get-random-values": "^1.11.0",
+    "react-native-paper": "^5.14.0",
     "react-native-spinkit": "^1.5.1",
     "react-native-svg": "15.11.2",
     "react-native-url-polyfill": "^2.0.0",
