--- a/package.json
+++ b/package.json
@@ -19,10 +19,12 @@
     "expo-barcode-scanner": "^13.0.1",
     "expo-camera": "~16.1.6",
     "expo-status-bar": "~2.2.3",
+    "expo-updates": "~0.28.12",
     "node-libs-react-native": "^1.2.1",
     "process": "^0.11.10",
     "react": "19.0.0",
     "react-native": "0.79.2",
+    "react-native-device-info": "^14.0.4",
     "react-native-get-random-values": "^1.11.0",
     "react-native-paper": "^5.14.0",
     "react-native-spinkit": "^1.5.1",
@@ -30,8 +32,7 @@
     "react-native-url-polyfill": "^2.0.0",
     "react-native-websocket": "^1.0.2",
     "stream-browserify": "^3.0.0",
-    "util": "^0.12.5",
-    "expo-updates": "~0.28.12"
+    "util": "^0.12.5"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
