--- a/package.json
+++ b/package.json
@@ -32,7 +32,10 @@
     "react-native-url-polyfill": "^2.0.0",
     "react-native-websocket": "^1.0.2",
     "stream-browserify": "^3.0.0",
-    "util": "^0.12.5"
+    "util": "^0.12.5",
+    "expo-font": "~13.3.1",
+    "expo-splash-screen": "~0.30.9",
+    "expo-av": "~15.1.6"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
