--- a/package.json
+++ b/package.json
@@ -35,10 +35,12 @@
     "util": "^0.12.5",
     "expo-font": "~13.3.1",
     "expo-splash-screen": "~0.30.9",
-    "expo-av": "~15.1.6"
+    "expo-av": "~15.1.6",
+    "expo-linear-gradient": "~14.1.5"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "@types/react": "~19.0.10"
   },
   "private": true
 }
