--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "bi-qr-scanner",
-    "slug": "bi-qr-scanner",
+    "name": "satf-qr-scanner",
+    "slug": "satf-qr-scanner",
     "version": "1.0.0",
     "orientation": "default",
     "icon": "./assets/icon.png",
@@ -27,7 +27,7 @@
         "android.permission.CAMERA",
         "android.permission.RECORD_AUDIO"
       ],
-      "package": "com.kenmirwell.biqrscanner"
+      "package": "com.lander.satfqrscanner"
     },
     "web": {
       "favicon": "./assets/favicon.png"
@@ -44,14 +44,16 @@
     ],
     "extra": {
       "eas": {
-        "projectId": "d9188980-82a2-4f5f-bba2-6f3f0899ebfa"
+        "projectId": "b109f689-7ac6-41d1-88cd-08a1c00713b1"
       }
     },
     "runtimeVersion": {
       "policy": "appVersion"
     },
     "updates": {
-      "url": "https://u.expo.dev/d9188980-82a2-4f5f-bba2-6f3f0899ebfa"
-    }
+      "url": "https://u.expo.dev/b109f689-7ac6-41d1-88cd-08a1c00713b1"
+    },
+    "owner": "webdevblink"
   }
 }
+ 
